SERVER-10464 allow mongodump to dump oplog without a query containing a ts field (cherry picked from commit 50045df21469d45216c5fb8899d68818fcc7f38a)